[package]
name = "lumus-log"
version = "0.1.1"
edition = "2021"
authors = ["Dayvson Spacca spacca.dayvson@gmail.com"]
description = "Easily console and file logger"
license = "MIT"
keywords = ["logger", "log"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lumus_logger"

[dependencies]
chrono = "0.4.38"
colored = "2.1.0"
